feat: Add batch audio generation system with voice selection
- Added comprehensive batch TTS generation script with Gemini API
- Support for multiple voices: Charon (male) and Zephyr (female)
- Pre-generated audio service for instant playback
- Smart fallback system: pre-generated → cache → real-time TTS
- Generated 15 chapters with male voice (78MB total)
- Voice preference system ready for onboarding/settings
- Complete documentation and usage instructions
- Significant performance improvement for audio experience

Scripts:
- npm run generate-audio-male/female
- npm run test-audio-api
- Quota-aware generation with resume capability

Files generated: 15/29 chapters complete
Next: Generate remaining chapters when quota resets

--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-audio": "node scripts/generateAudio.js generate",
+    "generate-audio-male": "node scripts/generateAudio.js generate male",
+    "generate-audio-female": "node scripts/generateAudio.js generate female",
+    "test-audio-api": "node scripts/generateAudio.js test",
+    "test-audio-male": "node scripts/generateAudio.js test male",
+    "test-audio-female": "node scripts/generateAudio.js test female"
   },
   "dependencies": {
     "@google/genai": "^1.15.0",
