feat: Add complete backend API for production Stripe integration
- Create comprehensive Node.js/Express backend with Stripe integration
- Add Firebase Admin SDK for secure user authentication
- Implement Stripe webhook handling for subscription events
- Create API endpoints for checkout sessions and subscription management
- Add security middleware (Helmet, CORS, rate limiting)
- Update frontend Stripe service to use real backend API
- Add comprehensive deployment guide and documentation

Backend Features:
- Express.js server with security middleware
- Firebase authentication integration
- Stripe payment processing with webhooks
- Subscription status management
- Customer portal integration
- Input validation with Joi
- Error handling and logging
- Production-ready configuration

API Endpoints:
- POST /api/stripe/create-checkout-session
- GET /api/stripe/subscription-status
- POST /api/stripe/create-customer-portal-session
- POST /api/stripe/cancel-subscription
- POST /api/webhooks/stripe

Deployment:
- Vercel deployment configuration
- Environment variable setup
- Comprehensive deployment guide
- Security checklist and monitoring

Frontend Updates:
- Updated Stripe service to use backend API
- Added backend URL configuration
- Real Stripe checkout integration
- Proper error handling and fallbacks

--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,8 @@ VITE_FIREBASE_MEASUREMENT_ID=G-ESMC5KZSKK
 
 # Stripe Configuration
 VITE_STRIPE_PUBLISHABLE_KEY=pk_test_your_publishable_key_here
-VITE_STRIPE_PRICE_ID=sk_test_your_secret_key_here
+VITE_STRIPE_MONTHLY_PRICE_ID=price_your_monthly_price_id_here
+VITE_STRIPE_YEARLY_PRICE_ID=price_your_yearly_price_id_here
+
+# Backend API Configuration
+VITE_BACKEND_URL=http://localhost:3001
