--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "generate-audio-female": "node scripts/generateAudio.js generate female",
     "test-audio-api": "node scripts/generateAudio.js test",
     "test-audio-male": "node scripts/generateAudio.js test male",
-    "test-audio-female": "node scripts/generateAudio.js test female"
+    "test-audio-female": "node scripts/generateAudio.js test female",
+    "audio-schedule": "node scripts/audioScheduler.js schedule",
+    "audio-generate": "node scripts/audioScheduler.js generate",
+    "audio-status": "node scripts/audioScheduler.js status",
+    "audio-test": "node scripts/audioScheduler.js test"
   },
   "dependencies": {
     "@google/genai": "^1.15.0",
@@ -28,6 +32,7 @@
     "flowbite-react": "^0.11.8",
     "framer-motion": "^12.19.1",
     "lucide-react": "^0.522.0",
+    "node-cron": "^4.2.1",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
