Add intelligent file change detection to audio scheduler
Features:
- Automatic detection of modified markdown files
- Only regenerates audio for changed content (saves API quota)
- File modification time comparison between source and audio files
- Force regeneration option for all files
- New commands: check, force, generate --force

New Commands:
- npm run audio-check [voice] [content-types] - Check for modified files and regenerate only changed content
- npm run audio-force [voice] [content-types] - Force regenerate all audio files
- npm run audio-generate [voice] [content-types] --force - Force regenerate with generate command

File Change Detection:
- Compares source file modification time with audio file modification time
- Skips unchanged files to save API quota
- Automatically regenerates audio when source files are modified
- Supports all content types: book chapters, meditations, stories

Benefits:
- Efficient API usage - only generates audio for changed content
- Automatic detection - no manual intervention needed
- Quota savings - significant reduction in API requests
- Smart regeneration - preserves existing audio for unchanged files

Usage Examples:
- Edit a meditation file, then run: npm run audio-check female meditations
- Change voice settings, then run: npm run audio-force male book
- Add new content, then run: npm run audio-generate male stories

Technical:
- File modification time checking with fs.stat()
- Source file path mapping for all content types
- Intelligent skip logic with detailed logging
- Backward compatible with existing commands

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "test-audio-female": "node scripts/generateAudio.js test female",
     "audio-schedule": "node scripts/audioScheduler.js schedule",
     "audio-generate": "node scripts/audioScheduler.js generate",
+    "audio-check": "node scripts/audioScheduler.js check",
+    "audio-force": "node scripts/audioScheduler.js force",
     "audio-status": "node scripts/audioScheduler.js status",
     "audio-test": "node scripts/audioScheduler.js test"
   },
