--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.8",
     "framer-motion": "^12.19.1",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.522.0",
     "node-cron": "^4.2.1",
     "postcss": "^8.5.6",
