Implement progressive loading with skeleton loaders and responsive quote text
- Add progressive loader service to load content in batches
- Replace loading spinner with elegant skeleton cards
- Implement react-use-fittext for responsive quote sizing
- Remove stories from quote generation (need more context)
- Add smooth moving gradient animation to skeletons
- Fix font size calculation for progressively loaded cards
- Set max font size to 25px for better aesthetics
- Update contentCache to integrate with progressive loader
- Add comprehensive documentation in PROGRESSIVE_LOADING.md

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-pageflip": "^2.0.3",
     "react-router-dom": "^7.6.2",
     "react-slick": "^0.31.0",
+    "react-use-fittext": "^1.0.2",
     "slick-carousel": "^1.8.1",
     "three": "^0.177.0",
     "vite-plugin-pwa": "^1.0.0",
