--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@google/generative-ai": "^0.24.1",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
+    "firebase": "^12.5.0",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.8",
     "framer-motion": "^12.19.1",
