Add Netlify secrets scan configuration and documentation for Firebase API key

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,7 @@
 [build]
   command = "npm run build"
   publish = "dist"
+  # Note: Firebase API keys are intentionally public (client-side config)
+  # The SECRETS_SCAN_SMART_DETECTION_OMIT_VALUES environment variable should be set
+  # in Netlify's dashboard to include the Firebase API key value to prevent false positives
 
