--- a/package.json
+++ b/package.json
@@ -7,41 +7,21 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "generate-audio": "node scripts/generateAudio.js generate",
-    "generate-audio-male": "node scripts/generateAudio.js generate male",
-    "generate-audio-female": "node scripts/generateAudio.js generate female",
-    "test-audio-api": "node scripts/generateAudio.js test",
-    "test-audio-male": "node scripts/generateAudio.js test male",
-    "test-audio-female": "node scripts/generateAudio.js test female",
-    "audio-schedule": "node scripts/audioScheduler.js schedule",
-    "audio-generate": "node scripts/audioScheduler.js generate",
-    "audio-check": "node scripts/audioScheduler.js check",
-    "audio-force": "node scripts/audioScheduler.js force",
-    "audio-status": "node scripts/audioScheduler.js status",
-    "audio-test": "node scripts/audioScheduler.js test"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
     "firebase": "^12.5.0",
     "flowbite": "^3.1.2",
-    "flowbite-react": "^0.11.8",
     "framer-motion": "^12.19.1",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.522.0",
-    "node-cron": "^4.2.1",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-pageflip": "^2.0.3",
     "react-router-dom": "^7.6.2",
-    "react-slick": "^0.31.0",
     "react-use-fittext": "^1.0.2",
-    "slick-carousel": "^1.8.1",
-    "three": "^0.177.0",
     "vite-plugin-pwa": "^1.0.0",
-    "wav": "^1.0.2",
     "workbox-window": "^7.3.0"
   },
   "devDependencies": {
@@ -49,7 +29,6 @@
     "@tailwindcss/forms": "^0.5.10",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "@types/three": "^0.179.0",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
