Add pre-generated quotes.json for instant homepage loading
- Created build script (generateQuotes.mjs) to pre-generate 1371 quote cards
- HomePage now loads quotes.json first (609KB, ~100-200ms load time)
- Reduced initial batch size from 5 to 2 chapters + 2 meditations
- Added prebuild hook to auto-generate quotes before each build
- Fallback chain: quotes.json -> localStorage cache -> generate from content
- Dramatically improves first-load performance from ~2-3s to ~100-200ms

--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "prebuild": "node scripts/generateQuotes.mjs",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate:quotes": "node scripts/generateQuotes.mjs"
   },
   "dependencies": {
     "@netlify/functions": "^2.8.2",
