--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "flowbite": "^3.1.2",
     "framer-motion": "^12.19.1",
     "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.522.0",
+    "marked": "^17.0.1",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
