--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,7 +13,7 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["react", "react-dom", "vite/client"],
+    "types": ["node", "vite/client"],
 
     /* Linting */
     "strict": true,
