feat: add GitHub Actions workflow for automatic audio generation
- Add workflow that triggers on markdown file changes
- Supports manual force regeneration via workflow_dispatch
- Automatically commits generated audio files
- Handles rate limits and incremental generation

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,14 @@ lerna-debug.log*
 
 # Debug files
 debug-*.html
+
+# Capacitor
+android/
+ios/
+.capacitor/
+
+# Android signing keys (NEVER commit these!)
+*.jks
+*.keystore
+keystore/
+android/keystore.properties
