--- a/package.json
+++ b/package.json
@@ -7,12 +7,25 @@
     "dev": "vite",
     "prebuild": "node scripts/generateQuotes.mjs",
     "build": "tsc -b && vite build",
+    "build:capacitor": "CAPACITOR=true npm run build",
     "lint": "eslint .",
     "preview": "vite preview",
     "generate:audio": "tsx scripts/generate-audio.ts",
-    "generate:quotes": "node scripts/generateQuotes.mjs"
+    "generate:quotes": "node scripts/generateQuotes.mjs",
+    "cap:sync": "npm run build:capacitor && npx cap sync",
+    "cap:copy": "npm run build:capacitor && npx cap copy",
+    "cap:open:android": "npx cap open android",
+    "cap:open:ios": "npx cap open ios",
+    "cap:run:android": "npm run cap:sync && npx cap run android",
+    "cap:run:ios": "npm run cap:sync && npx cap run ios"
   },
   "dependencies": {
+    "@capacitor/android": "^8.0.0",
+    "@capacitor/cli": "^8.0.0",
+    "@capacitor/core": "^8.0.0",
+    "@capacitor/ios": "^8.0.0",
+    "@capacitor/splash-screen": "^8.0.0",
+    "@capacitor/status-bar": "^8.0.0",
     "@netlify/functions": "^2.8.2",
     "autoprefixer": "^10.4.21",
     "firebase": "^12.5.0",
